--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,4 +40,4 @@ jobs:
             - vendor/bundle
       - run: bundle exec rake db:migrate
       # - run: bundle exec rake test
-      - run: bundle exec rubocop
+      - run: bundle exec rubocop -R
