--- a/test/fixtures/templates.yml
+++ b/test/fixtures/templates.yml
@@ -1,9 +1,9 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
-  name: MyString
-  properties: 
+  id: 1
+  name: Bilgisayar
+  properties: {}
 
 two:
-  name: MyString
-  properties: 
+  id: 2
+  name: Mobilya
+  properties: {}
